--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>API PlatziStore</title>
   <link type="text/css" rel="stylesheet" href="style.css">
 </head>
 <body>
   <main class="Main">
+    <include src="partials/header.html"></include>
     <div id="app"></div>
   </main>
 </body>
-<script defer src="index.js"></script>
+<script defer type="module" src="index.js"></script>
 </html>
