--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,5 @@
     <div id="app"></div>
   </main>
 </body>
-<script defer type="module" src="index.js"></script>
+<script defer type="module" src="./index.js"></script>
 </html>
